syntax = "proto3";

option csharp_namespace = "School.gRPC.Protos";

//import "google/protobuf/timestamp.proto";	
//import "google/protobuf/wrappers.proto";	
import "google/protobuf/empty.proto";

service Student {
	rpc GetStudent (StudentIDRequest) returns (StudentReply);
	rpc GetStudents (google.protobuf.Empty) returns (Students);
	rpc AddStudent (StudentReply) returns(google.protobuf.Empty);
	rpc DeleteStudent (StudentReply) returns(google.protobuf.Empty);
}

message StudentIDRequest {
  int32 StudentID = 1;
}

// The response message containing the greetings.
message StudentReply {
  int32 StudentID = 1;
  string Name = 2;
}

message Students {
	repeated StudentReply students = 1;
}